--- a/HTML/index.html
+++ b/HTML/index.html
@@ -63,7 +63,66 @@
         <form>
             <input type="Text" placeholder="Password">
         </form>
+
+        <table>
+            <tr>
+                <td> ICC Mens T20 World Cup 2021 - Points Table</td>
+            </tr>
+            <tr>
+                <td> SCORE CARD</td>
+            </tr>
+            <tr>
+                <td> Group A</td>
+                <td> Mat </td>
+                <td> Won</td>
+                <td> Lost</td>
+                <td> Tied</td>
+                <td> NR</td>
+                <td> Pts</td>
+                <td> NRR</td>
+            </tr>
+            <tr>
+                <td> Sri Lanka</td>
+                <td> 3</td>
+                <td> 3</td>
+                <td> 0</td>
+                <td> 0</td>
+                <td> 0</td>
+                <td> 6</td>
+                <td> +3.754</td>
+            </tr>
+            <tr>
+                <td> Namibia</td>
+                <td> 3</td>
+                <td> 2</td>
+                <td> 1</td>
+                <td> 0</td>
+                <td> 0</td>
+                <td> 4</td>
+                <td> -0.523</td>
+            </tr>
+            <tr>
+                <td> Ireland</td>
+                <td> 3</td>
+                <td> 1</td>
+                <td> 2</td>
+                <td> 0</td>
+                <td> 0</td>
+                <td> 2</td>
+                <td> -0.853</td>
+            </tr>
+            <tr>
+                <td> Netherlands</td>
+                <td> 3</td>
+                <td> 0</td>
+                <td> 3</td>
+                <td> 0</td>
+                <td> 0</td>
+                <td> 0</td>
+                <td> -2.460</td>
+            </tr>
+        </table>
+        <a href=https://www.cricbuzz.com/cricket-series/2798/icc-mens-t20-world-cup-2021/points-table>search info cricbuzz</a>
     </body>
 </head>
 </html>
-C:\Users\SHIVANI\Desktop
